refactoring, bug fix and add feedback edit form
