# routes/admin/ProjectsRoutes.js
@@ -1,5 +1,6 @@
 import { Router } from "express";
 import Joi from "joi";
+import mongoose from "mongoose";
 
 import msgHandler from "../../helpers/msgHandler.js";
 import errorHandler from "../../helpers/errorHandler.js";
@@ -7,18 +8,37 @@ import adminMiddleware from "../../middleware/adminMiddleware.js";
 import Project from "../../models/Project.js";
 
 const ProjectsRoutes = Router();
+const bodyJoiData = {
+    title: Joi
+        .string()
+        .empty()
+        .required(),
+    description: Joi.string(),
+    img: Joi.string()
+}
+const queryJoiData = {
+    id: Joi
+        .string()
+        .empty()
+        .required()
+        .custom((value, helper) => {
+            const isValidId = mongoose.Types.ObjectId.isValid(value);
+            if (!isValidId) return helper.message("\"query.id\" is invalid");
+            return true;
+        })
+}
 
 
 ProjectsRoutes
     .use(adminMiddleware)
-    .route("/projects")
+    .route("/project")
     .post(
         async (req, res) => {
-            // #swagger.path = "/admin/projects"
+            // #swagger.path = "/admin/project"
             // #swagger.description = "Allows the administrator to create a new project"
             // #swagger.summary = "create project"
             // #swagger.tags = ["Admin"]
-            /* #swagger.parameters["title", "description", "img"] = {
+            /* #swagger.parameters["data"] = {
                 in: "body",
                 description: "New project data",
                 type: "object",
@@ -37,15 +57,8 @@ ProjectsRoutes
             } */
 
             const errorHandlerResult = await errorHandler(
-                Joi.object({
-                    title: Joi
-                        .string()
-                        .empty()
-                        .required(),
-                    description: Joi.string(),
-                    img: Joi.string()
-                }).label("Request body"),
-                400, req
+                Joi.object(bodyJoiData).label("Request body"),
+                req.body, 400
             );
             if (errorHandlerResult) return res.status(400).json(errorHandlerResult);
 
@@ -65,13 +78,22 @@ ProjectsRoutes
                 res.status(500).json(await msgHandler({ statusCod: 500, message: "Server error." }));
             }
         }
-    ).put(
+    )
+
+ProjectsRoutes
+    .use(adminMiddleware)
+    .route("/project/:id")
+    .put(
         async (req, res) => {
-            // #swagger.path = "/admin/projects"
+            // #swagger.path = "/admin/projects/:id"
             // #swagger.description = "Allows the administrator to edit a project"
             // #swagger.summary = "edit project"
             // #swagger.tags = ["Admin"]
-            /* #swagger.parameters["id", "title", "description", "img"] = {
+            /* #swagger.parameters["id"] = {
+                description: "Edited project id",
+                required: true
+            } */
+            /* #swagger.parameters["data"] = {
                 in: "body",
                 description: "Edited project data",
                 type: "object",
@@ -89,24 +111,17 @@ ProjectsRoutes
 
             const errorHandlerResult = await errorHandler(
                 Joi.object({
-                    _id: Joi
-                        .string()
-                        .empty()
-                        .required(),
-                    title: Joi
-                        .string()
-                        .empty()
-                        .required(),
-                    description: Joi.string(),
-                    img: Joi.string()
-                }).label("Request body"),
-                400, req
+                    query: queryJoiData,
+                    body: bodyJoiData
+                }).label("Request data"),
+                { query: req.query, body: req.body }, 400
             );
-            if (errorHandlerResult) return res.status(400).json(errorHandlerResult);
+            if (errorHandlerResult) return res.status(400).json(errorHandlerResult)
 
             try {
-                const { _id, title, description, img } = req.body;
-                await Project.findByIdAndUpdate({ _id }, { title, description, img });
+                const { id } = req.query;
+                const { title, description, img } = req.body;
+                await Project.findByIdAndUpdate(id, { title, description, img });
 
                 return res.json(await msgHandler({
                     statusCod: 200,
@@ -119,18 +134,13 @@ ProjectsRoutes
         }
     ).delete(
         async (req, res) => {
-            // #swagger.path = "/admin/projects"
+            // #swagger.path = "/admin/projects/:id"
             // #swagger.description = "Allows the administrator to delete a project"
             // #swagger.summary = "delete project"
             // #swagger.tags = ["Admin"]
             /* #swagger.parameters["id"] = {
-                in: "body",
                 description: "Deleted project id",
-                type: "object",
-                required: true,
-                schema: {
-                    _id: "string"
-                }
+                required: true
             } */
             /* #swagger.responses[200] = {
                 description: "Result info",
@@ -140,19 +150,14 @@ ProjectsRoutes
             } */
 
             const errorHandlerResult = await errorHandler(
-                Joi.object({
-                    _id: Joi
-                        .string()
-                        .empty()
-                        .required()
-                }).label("Request body"),
-                400, req
+                Joi.object(queryJoiData).label("Request query"),
+                req.query, 400
             );
             if (errorHandlerResult) return res.status(400).json(errorHandlerResult);
 
             try {
-                const { _id } = req.body;
-                await Project.findByIdAndDelete({ _id });
+                const { id } = req.query;
+                await Project.findByIdAndDelete(id);
 
                 return res.json(await msgHandler({
                     statusCod: 200,
